--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Synex Digital</title>
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/custom.css">
+    <style>
+
+
+    </style>
 </head>
 
 <body>
@@ -75,7 +79,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-menu-center">
                         <li class="nav-item">
-                            <a class="nav-link fw-medium active" aria-current="page" href="#">Services</a>
+                            <a class="nav-link fw-medium " aria-current="page" href="#">Services</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link fw-medium" href="#">Project</a>
@@ -96,6 +100,7 @@
     <main>
         <!-- Hero section -->
         <section class="container-fluid banner">
+            <div class="faded-ball"></div>
             <div class="container py-5">
                 <div class="row py-5 gy-5">
                     <div class="col-md-6">
@@ -106,7 +111,7 @@
                             We are the Synex Digital Team and are Highly Motivated to Give You The Best and effective
                             on-time Results for Your Online Presence and Traffic Growth.
                         </p>
-                        <button class="btn btn-primary btn-default rounded-pill mt-4">Explore Our Portfolio</button>
+                        <button class="btn btn-primary btn-round btn-default  mt-4">Explore Our Portfolio</button>
                     </div>
                     <div class="col-md-6 d-flex justify-content-center">
                         <img src="./assets/images/Frame 9.png" width="80%" alt="Synex Digital">
@@ -400,6 +405,87 @@
                 </div>
             </div>
         </section>
+        <!-- Our Records  -->
+        <section class="container-fluid">
+            <div class="container py-5">
+                <div class="row mb-4 text-center">
+                    <p class="section-name font-main">Our Records</p>
+                    <h3 class="section-title font-second m-auto w-505" >Navigating the IT Landscape with Precision</h3>
+                </div>
+                <div class="row py-5 g-5">
+                    <div class=" col-sm-6 col-md-4 col-lg-6">                 
+                            <div class="image-record"> </div>         
+                    </div>
+                    <div class=" col-sm-6 col-md-4 col-lg-6">
+                        <div class="text-record">
+                           <p class="p-lr">Synex Digital's outstanding records reflect our commitment 
+                            to excellence. With a proven track record in Web and App 
+                            Development, transformative UI/UX design, and impactful 
+                            Digital Marketing, we consistently surpass expectations. In 
+                            the dynamic world of IT, simplicity meets sophistication in our 
+                            approach. Our services encompass the entire spectrum, 
+                            from basic IT definitions to complex technology solutions.</p>
+                            <p  class="p-lr">We redefine the very essence of service businesses, 
+                            delivering not just solutions but an experience that goes 
+                            beyond expectations. Our portfolio of successful projects 
+                            stands as a testament to our dedication, delivering top notch 
+                            solutions that propel businesses forward.</p>
+                            <p class="p-lr">Our history of exceeding milestones, ensuring timely delivery, 
+                            and surpassing quality benchmarks underscores why Synex 
+                            Digital is the trusted choice for unparalleled digital success.</p>
+                            <p class="p-lr">Our history of exceeding milestones, ensuring timely delivery, 
+                            and surpassing quality benchmarks underscores why Synex 
+                            Digital is the trusted choice for unparalleled digital success.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- Our Records  -->
+        <section class="container-fluid">
+            <div class="container py-5">
+                <div class="row  text-center">
+                    <p class="section-name font-main">Our Projects</p>
+                    <div class="d-flex ">
+
+                        <h3 class="section-title font-second m-auto w-505 pl-10 mt-0" >Services We Provide</h3>
+                        <span class="left arrow  "><img src="assets/images/left-arrow.png" alt=""></span>
+                        <span class="right arrow "><img src="assets/images/right-arrow.png" alt=""></span>
+                    </div>
+                    
+                </div>
+                <div class="row py-5 g-5">
+                    <div class=" col-sm-6 col-md-4 col-lg-6">                 
+                        <div class="card project-card">
+                            <img src="assets/images/Frame11.jpeg" class="card-img-top card-image" alt="...">
+                            <a href="" class="btn app-design">App Design</a>
+                            <div class="card-body py-0">
+                              <h5 class="card-title font-700 mb-0">E-Commerce App Design</h5>
+                              <p class="card-text font-14 ">Lorem ipsum dolor sit amet consectetur. Nulla at habitant 
+                                malesuada feugiat et ut elit nullam eget.</p>
+                              
+                            </div>
+                          </div>
+                    </div>
+                    <div class=" col-sm-6 col-md-4 col-lg-6">                 
+                        <div class="card project-card">
+                            <img src="assets/images/Frame11.jpeg" class="card-img-top card-image" alt="...">
+                            <a href="" class="btn app-design">App Design</a>
+                            <div class="card-body py-0">
+                              <h5 class="card-title font-700 mb-0">E-Commerce App Design</h5>
+                              <p class="card-text font-14 ">Lorem ipsum dolor sit amet consectetur. Nulla at habitant 
+                                malesuada feugiat et ut elit nullam eget.</p>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="text-center">
+                        <a href="" class="btn btn-primary text-center btn-default fw-light">View All</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
