update Privacy Policy
update Privacy Policy

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <a class="nav-link fw-medium" href="#">Shop</a>
                         </li>
                     </ul>
-                    <a class="btn btn-primary btn-default rounded-pill" href="#">Get in touch</a>
+                    <a class="btn btn-primary btn-default rounded-pill" href="get-in-touch.html">Get in touch</a>
                 </div>
             </div>
         </nav>
