--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -186,7 +186,7 @@
         <p>Let's unite and craft something truly remarkable. We're excited to collaborate and bring visionary ideas to life.</p>
         <div class="cta-buttons">
             <a href="#" class="btn btn-light text-primary">Contact Us →</a>
-            <a href="#" class="btn btn-outline-light">Schedule Meeting</a>
+            <a href="#" class="btn btn-outline-light">Schedule Meeting →</a>
         </div>
     </div>
 </section>
